--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-success ml-3" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
+                            <a class="btn btn-outline-success ml-3" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp"></i></a>
                         </li>
                     </ul>
 
