--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-success ml-3" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
+                            <a class="btn btn-success ml-3" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
                         </li>
                     </ul>
 
