--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
                 </div>
 
                 <!--DIV COM OS ÍCONES DE REDES SOCIAIS DO RODAPÉ-->
-                <div class="col-md-2">
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-behance"></i></a>
-                    <a href=""><i class="fa-brands fa-github"></i></a>
-                    <a class="btn btn-success ml-md-3" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
+                <div class="col-md-2 d-flex justify-contend-end">
+                    <a href=""><i class="fa-brands fa-facebook fa-xl btn-light"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram ml-3 fa-xl btn-light"></i></a>
+                    <a href=""><i class="fa-brands fa-behance ml-3 fa-xl btn-light"></i></a>
+                    <a href=""><i class="fa-brands fa-github ml-3 fa-xl btn-light"></i></a>
+                    <a href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp ml-3 fa-xl btn-light"></i></a>
                 </div>
 
             </div>
