--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                 <!--DIV COM OS ÍCONES DE REDES SOCIAIS DO RODAPÉ-->
                 <div class="col-md-4 d-flex justify-contend-end">
-                    <a href=""><i class="fa-brands fa-facebook fa-xl btn-light bg-light"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook fa-xl btn btn-light bg-light"></i></a>
                     <a href=""><i class="fa-brands fa-instagram ml-3 fa-xl btn-light"></i></a>
                     <a href=""><i class="fa-brands fa-behance ml-3 fa-xl btn-light"></i></a>
                     <a href=""><i class="fa-brands fa-github ml-3 fa-xl btn-light"></i></a>
