--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
      <!--INÍCIO DO RODAPÉ-->
    
-    <footer class="mt-4 pd-4">
+    <footer class="mt-4">
 
         <div class="container">
             <div class="row">
@@ -160,6 +160,7 @@
                 <div class="col-md-8 d-flex justify-contend-start">
                     <p>
                         <h6>Todos os direitos reservados &#174 | By Kaciel Aires</h6>
+                        <br>
                         <h6>CNPJ: 22.018.487/0001-72</h6>
                     </p>
 
