--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!--INÍCIO DO CABEÇALHO (MENU)-->
     <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
 
             <div class="container">
 
@@ -160,6 +160,7 @@
                 <div class="col-md-8 d-flex justify-contend-start">
                     <p>
                         <h6>Todos os direitos reservados &#174 | By Kaciel Aires</h6>
+                        <br>
                         <br>
                         <h6>CNPJ: 22.018.487/0001-72</h6>
                     </p>
