--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <img src="img/saiba.png"  alt="">
+                    <img src="img/saiba.png" class="img-fluid" alt="">
 
                 </div>
 
