--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <div>
                      
 
-                    <ul>
+                    <ul style="list-style-type: none;">
                         <li>
                             Todos os direitos reservados &#174 | By Kaciel Aires
                         </li>
@@ -216,7 +216,8 @@
                             CNPJ: 22.018.487/0001-72
                         </li>
                     </ul>
-                   
+
+                    </div>
 
                 </div>
 
