--- a/index.html
+++ b/index.html
@@ -192,6 +192,54 @@
 
         </div>
     
+    </section>    
+
+
+    <!--OUTRA SEÇÃO-->
+
+    <section class="caixa">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-4 d-flex">
+                    <div class="align-self-center">
+                        <img src="img/suporte.png" class="img-fluid" alt="">
+                        <h2>Lorem ipsum dolor sit amet.</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, in. Doloribus numquam cupiditate iste quam magnam repellendus, blanditiis iusto id dolore necessitatibus laudantium quod repellat obcaecati accusamus harum nostrum at.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="col-md-4 d-flex">
+                    <div class="align-self-center">
+                        <img src="img/juros.png" alt="">
+                        <h2>Lorem ipsum dolor sit amet.</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, in. Doloribus numquam cupiditate iste quam magnam repellendus, blanditiis iusto id dolore necessitatibus laudantium quod repellat obcaecati accusamus harum nostrum at.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="col-md-4 d-flex">
+                    <div class="align-self-center">
+                        <img src="img/facil.png" class="img-fluid" alt="">
+                        <h2>Lorem ipsum dolor sit amet.</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, in. Doloribus numquam cupiditate iste quam magnam repellendus, blanditiis iusto id dolore necessitatibus laudantium quod repellat obcaecati accusamus harum nostrum at.
+                        </p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    
+    </section>    
+
 
 
      <!--INÍCIO DO RODAPÉ-->
