--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
                 <div class="col-md-4 d-flex">
                     <div class="align-self-center">
-                        <img src="img/juros.png" class="img-fluid" alt="">
+                        <img src="img/facil.png" class="img-fluid" alt="">
                         <h2>Lorem ipsum dolor sit amet.</h2>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, in. Doloribus numquam cupiditate iste quam magnam repellendus, blanditiis iusto id dolore necessitatibus laudantium quod repellat obcaecati accusamus harum nostrum at.
